Add yarn to the playground / cleanup JS

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -222,10 +222,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/add.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item1]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/add.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item1]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.alagoasdevday.com.br", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item1]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.alagoasdevday.com.br", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -237,10 +237,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/casamento.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item2]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/casamento.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item2]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.rosanaegustavo.com.br", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item2]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.rosanaegustavo.com.br", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -252,10 +252,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/duranbah.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item3]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/duranbah.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item3]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.duranbah.com.br", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item3]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.duranbah.com.br", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -267,10 +267,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/waterhouse.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item4]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/waterhouse.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item4]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.waterhouse.com.br", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item4]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.waterhouse.com.br", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -282,10 +282,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/lotebox-mvp.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item5]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/lotebox-mvp.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item5]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://mvp.lotebox.co", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item5]), class: "linKed", target: :blank do %>
+								<%=link_to "http://mvp.lotebox.co", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -297,10 +297,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/zeropixel.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item6]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/zeropixel.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item6]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.zeropixel.com.br", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item6]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.zeropixel.com.br", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -312,10 +312,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/kuka.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item7]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/kuka.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item7]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.kukaestrategia.com/", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item7]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.kukaestrategia.com/", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -327,10 +327,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/cliom.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item8]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/cliom.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item8]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.hospitalcliom.com.br/", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item8]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.hospitalcliom.com.br/", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -342,10 +342,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/jambo.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item9]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/jambo.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item9]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.grupojambo.com.br/", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item9]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.grupojambo.com.br/", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -357,10 +357,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/junior-almeida.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item10]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/junior-almeida.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item10]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.suechamusca.com.br/junioralmeida/", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item10]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.suechamusca.com.br/junioralmeida/", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -372,10 +372,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/maceiomarhotel.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item11]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/maceiomarhotel.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item11]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.maceiomarhotel.com.br/", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item11]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.maceiomarhotel.com.br/", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
@@ -387,10 +387,10 @@
 					<div class="lightCon">
 						<span class="hoverBox">
 							<span class="smallIcon">
-								<%=link_to asset_path('portfolio/nordeste.jpg'), rel: "lightbox-demo", title: t(:caption, scope: [:portfolio, :items, :item12]), class: "zoom lb lb_warsaw1" do %>
+								<%=link_to asset_path('portfolio/nordeste.jpg'), rel: "lightbox-demo", data: { title: t(:caption, scope: [:portfolio, :items, :item12]) }, class: "zoom lb lb_warsaw1" do %>
 									<i class="fa fa-search fa-2x"></i>
 								<%end%>
-								<%=link_to "http://www.nordestetecnologia.com.br/", rel: "lightbox-demo", title: t(:name, scope: [:portfolio, :items, :item12]), class: "linKed", target: :blank do %>
+								<%=link_to "http://www.nordestetecnologia.com.br/", class: "linKed", target: :blank do %>
 									<i class="fa fa-link fa-2x"></i></i>
 								<%end%>
 							</span>
