--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,7 +23,7 @@
  * 12. Footer Style
  * 13. Responsive style
 
- *= require bootstrap/bootstrap
+ *= require bootstrap/dist/css/bootstrap
  *= require font-awesome
  *= require reset
  *= require setup
@@ -39,8 +39,7 @@
  *= require contact
  *= require footer
  *= require responsive
- *= require jquery-ui
- *= require lightbox
+ *= require ekko-lightbox/dist/ekko-lightbox
  *= require i18n
  *= require_self
 */
