--- a/app/views/layouts/website.html.erb
+++ b/app/views/layouts/website.html.erb
@@ -97,7 +97,7 @@
 		<!--footer end-->
 	</div>
 	<!--wrapper end-->
-	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track': true, type: 'application/javascript' %>
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
