--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,91 +1,83 @@
-  <!--about me start-->
-  <section class="aboutme" id="aboutme">
-    <div class="container">
-      <div class="heading">
-        <h2><%=t(:title, scope: [:about])%></h2>
-      </div>
-      <div class="row">
-        <%=render @about%>
-      </div>
+<!--about me start-->
+<section class="aboutme" id="aboutme">
+  <div class="container">
+    <div class="heading">
+      <h2><%=t(:title, scope: [:about])%></h2>
     </div>
-  </section>
-  <!--about me end-->
-  <!--technical start-->
-  <section class="technical" id="technical">
-    <div class="container">
-      <div class="heading">
-        <h2><%=t(:title, scope: [:skills])%></h2>
-        <p><%=t(:subtitle, scope: [:skills])%></p>
-      </div>
-      <div class="row">
-        <%=render @skills%>
-      </div>
+    <div class="row">
+      <%=render @about%>
     </div>
-  </section>
-  <!--technical end-->
-  <!--experience start-->
-  <section class="experience" id="experience">
-    <div class="container">
-      <div class="heading">
-        <h2><%=t(:title, scope: [:experience])%></h2>
-        <p><%=t(:subtitle, scope: [:experience])%></p>
-      </div>
-      <%=render @work_experiences%>
+  </div>
+</section>
+<!--about me end-->
+<!--technical start-->
+<section class="technical" id="technical">
+  <div class="container">
+    <div class="heading">
+      <h2><%=t(:title, scope: [:skills])%></h2>
+      <p><%=t(:subtitle, scope: [:skills])%></p>
     </div>
-  </section>
-  <!--experience end-->
-  <!--education start-->
-  <section class="education" id="education">
-    <div class="container">
-      <div class="heading">
-        <h2><%=t(:title, scope: [:education])%></h2>
-        <p><%=t(:subtitle, scope: [:education])%></p>
-      </div>
-      <%=render @educations%>
+    <div class="row">
+      <%=render @skills%>
     </div>
-  </section>
-  <!--education end-->
-  <!--portfolio start-->
-  <section class="portfolio" id="portfolio">
-    <div class="container">
-      <div class="heading">
-        <h2><%=t(:title, scope: [:portfolio])%></h2>
-        <p><%=t(:subtitle, scope: [:portfolio])%></p>
-      </div>
-      <div class="portfolioFilter">
-        <ul>
-          <li><a href="#" data-filter="*" class="current"><%=t(:all, scope: [:portfolio, :filters])%></a></li>
-          <%=render partial: 'portfolios/category', collection: categories(@portfolios), as: :category%>
-        </ul>
-      </div>
-      <ul class="portfolioContainer row">
-        <%=render @portfolios%>
+  </div>
+</section>
+<!--technical end-->
+<!--experience start-->
+<section class="experience" id="experience">
+  <div class="container">
+    <div class="heading">
+      <h2><%=t(:title, scope: [:experience])%></h2>
+      <p><%=t(:subtitle, scope: [:experience])%></p>
+    </div>
+    <%=render @work_experiences%>
+  </div>
+</section>
+<!--experience end-->
+<!--education start-->
+<section class="education" id="education">
+  <div class="container">
+    <div class="heading">
+      <h2><%=t(:title, scope: [:education])%></h2>
+      <p><%=t(:subtitle, scope: [:education])%></p>
+    </div>
+    <%=render @educations%>
+  </div>
+</section>
+<!--education end-->
+<!--portfolio start-->
+<section class="portfolio" id="portfolio">
+  <div class="container">
+    <div class="heading">
+      <h2><%=t(:title, scope: [:portfolio])%></h2>
+      <p><%=t(:subtitle, scope: [:portfolio])%></p>
+    </div>
+    <div class="portfolioFilter">
+      <ul>
+        <li><a href="#" data-filter="*" class="current"><%=t(:all, scope: [:portfolio, :filters])%></a></li>
+        <%=render partial: 'portfolios/category', collection: categories(@portfolios), as: :category%>
       </ul>
     </div>
-  </section>
-  <!--portfolio end-->
-  <!--contact start-->
-  <section class="contact" id="contact">
-    <div class="container topCon">
-      <div class="heading">
-        <h2><%=t(:title, scope: [:contact])%></h2>
-        <p><%=t(:subtitle, scope: [:contact])%></p>
-      </div>
+    <ul class="portfolioContainer row">
+      <%=render @portfolios%>
+    </ul>
+  </div>
+</section>
+<!--portfolio end-->
+<!--contact start-->
+<section class="contact" id="contact">
+  <div class="container topCon">
+    <div class="heading">
+      <h2><%=t(:title, scope: [:contact])%></h2>
+      <p><%=t(:subtitle, scope: [:contact])%></p>
     </div>
-  </section>
-  <section class="contactDetails">
-    <div class="container">
-      <!--contact info start-->
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <h4><%=t(:title, scope: [:contact, :contacts])%></h4>
-        <p class="col-xs-12 col-sm-4 col-md-4 col-lg-4" itemprop="address" itemscope itemtype="https://schema.org/PostalAddress"> <i class="fa fa-map-marker fa-lg"></i> <span itemprop="addressLocality"><%=t(:city, scope: [:contact, :contacts, :address])%></span> / <span itemprop="addressRegion"><%=t(:state, scope: [:contact, :contacts, :address])%></span> - <span itemprop="addressCountry"><%=t(:country, scope: [:contact, :contacts, :address])%></span></p>
-        <p class="col-xs-12 col-sm-4 col-md-4 col-lg-4" itemprop="telephone"> <i class="fa fa-mobile fa-lg"></i> <%=t(:phone, scope: [:contact, :contacts])%></p>
-        <p class="col-xs-12 col-sm-4 col-md-4 col-lg-4" itemprop="email"> <i class="fa fa-envelope-o "></i> <a href="mailto:gustavocunha&#64;gmail&#46;com"><%=t(:email, scope: [:contact, :contacts]).html_safe%></a></p>
-        <p class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> <i class="fa fa-github"></i> <a href="https://github.com/gmmcal" target="_blank"><%=t(:github, scope: [:contact, :contacts])%></a></p>
-        <p class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> <i class="fa fa-linkedin"></i> <a href="https://linkedin.com/in/gmmcal" target="_blank"><%=t(:linkedin, scope: [:contact, :contacts])%></a></p>
-        <p class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> <i class="fa fa-twitter"></i> <a href="https://twitter.com/gmmcal" target="_blank"><%=t(:twitter, scope: [:contact, :contacts])%></a></p>
-      </div>
-      <!--contact info end-->
-    </div>
-  </section>
-  <!--contact end-->
+  </div>
+</section>
+<section class="contactDetails">
+  <div class="container">
+    <!--contact info start-->
+    <%=render 'abouts/contact'%>
+    <!--contact info end-->
+  </div>
+</section>
+<!--contact end-->
