--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
   <!--google font style-->
   <!--font-family: 'Open Sans', sans-serif;-->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'modernizr', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': true, type: 'application/javascript' %>
+  <%= javascript_pack_tag 'application', type: 'application/javascript' %>
 
   <noscript>
   <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track' => true %>
